examples/datalog/21_query_features/22_computed_constant.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_comp_const
Knowledge graph 'test_comp_const' created.
Switched to knowledge graph: test_comp_const
> .kg use test_comp_const
Switched to knowledge graph: test_comp_const
> +nums[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'nums'.
> multiples(X, D, T) :- nums(X), D = X * 2, T = X * 3.
Script error: Query execution failed: Unsafe rule: Atom { relation: "multiples", args: [Variable("X"), Variable("D"), Variable("T")] }. Variables ["D", "T"] in head do not appear in positive body atoms.
